  first character (instead of comma) in the set ":|; ,"
  (Fabrice Le Fessant)

### Runtime system:

### Other libraries:

### Manual and documentation:

### Tools:

- MPR#7635: ocamldoc, add an identifier to module and module type elements
  (Florian Angeletti, review by Yawar Amin and Gabriel Scherer)

### Compiler distribution build system

### Internal/compiler-libs changes:

### Bug fixes

Release branch for 4.06:
------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- GPR#792: fix limitations of destructive substitutions, by
  allowing "S with type t := type-expr",
  "S with type M.t := type-expr", "S with module M.N := path"
  (Valentin Gatien-Baron, review by Jacques Garrigue and Leo White)

- GPR#1118: Support inherited field in object type expression
  (Runhang Li, reivew by Jeremy Yallop, Leo White, Jacques Garrigue,
   and Florian Angeletti)

- MPR#6271, MPR#7529, GPR#1249: Support "let open M in ..."
  in class expressions and class type expressions.
  (Alain Frisch, reviews by Thomas Refis and Jacques Garrigue)

- GPR#1064: extended indexing operators, add a new class of
  user-defined indexing operators, obtained by adding at least
  one operator character after the dot symbol to the standard indexing
  operators: e,g ".%()", ".?[]", ".@{}<-"
  (Florian Angeletti, review by Damien Doligez and Gabriel Radanne)

- GPR#1142: Mark assertions nonexpansive, so that 'assert false'
  can be used as a placeholder for a polymorphic function.
  (Stephen Dolan)

* GPR#1232: Support Unicode character escape sequences in string
  literals via the \u{X+} syntax. These escapes are substituted by the
  UTF-8 encoding of the Unicode character.
  (Daniel Bünzli, review by Damien Doligez, Alain Frisch, Xavier
  Leroy and Leo White)

- GPR#1247: M.(::) construction for expressions
  and patterns (plus fix printing of (::) in the toplevel)
  (Florian Angeletti, review by Alain Frisch, Gabriel Scherer)
