@@ -1,0 +1,2 @@
+File "pr6604.ml", line 1, characters 0-1:
+Error: Syntax error
