@@ -1,0 +1,2 @@
+File "pr6604_2.ml", line 1, characters 1-2:
+Error: Syntax error
